src/llvm/wrapper/core.nim


# proc structType*(elementTypes: ptr TypeRef; elementCount: cuint;packed: Bool): TypeRef {. cdecl, importc: "LLVMStructType", dynlib: LLVMlib.}
#     ##  Create a new structure type in the global context.
#     ##
#     ##  @see llvm::StructType::create()

proc createStruct*(cxt: Context, name: string): StructType =
    ##  Create an empty structure in a context having a specified name.
    ## 
    ##  Wrapping:
    ##  * `structCreateNamed(c: ContextRef; name: cstring)<../llvm/Core.html#createStruct,ContextRef,cstring>`_
    newType[StructType](structCreateNamed(cxt.context, name))

# proc getStructName*(ty: TypeRef): cstring {.cdecl, importc: "LLVMGetStructName", dynlib: LLVMlib.}
#     ##  Obtain the name of a structure.
#     ##
#     ##  @see llvm::StructType::getName()

# proc structSetBody*(structTy: TypeRef; elementTypes: ptr TypeRef; elementCount: cuint;packed: Bool) {.cdecl, importc: "LLVMStructSetBody", dynlib: LLVMlib.}
#     ##  Set the contents of a structure type.
#     ##
#     ##  @see llvm::StructType::setBody()
proc `body=`*(struct: Type, elementTypes: openArray[Type], packed: bool = false) =
    var
        s = elementTypes.map(proc(a: Type): TypeRef = a.typ)
        adr = if s.len > 0: s[0].addr else: nil
        l = cuint s.len
    structSetBody(struct.typ, adr, l, packed)

# proc countStructElementTypes*(structTy: TypeRef): cuint {.cdecl, importc: "LLVMCountStructElementTypes", dynlib: LLVMlib.}
#     ##  Get the number of elements defined inside the structure.
#     ##
#     ##  @see llvm::StructType::getNumElements()

# proc getStructElementTypes*(structTy: TypeRef; dest: ptr TypeRef) {.cdecl, importc: "LLVMGetStructElementTypes", dynlib: LLVMlib.}
#     ##  Get the elements within a structure.
#     ##
#     ##  The function is passed the address of a pre-allocated array of
#     ##  LLVMTypeRef at least LLVMCountStructElementTypes() long. After
#     ##  invocation, this array will be populated with the structure's
#     ##  elements. The objects in the destination array will have a lifetime
#     ##  of the structure type itself, which is the lifetime of the context it
#     ##  is contained in.

# proc structGetTypeAtIndex*(structTy: TypeRef; i: cuint): TypeRef {.cdecl, importc: "LLVMStructGetTypeAtIndex", dynlib: LLVMlib.}
#     ##  Get the type of the element at a given index in the structure.
#     ##
#     ##  @see llvm::StructType::getTypeAtIndex()

# proc isPackedStruct*(structTy: TypeRef): Bool {.cdecl, importc: "LLVMIsPackedStruct", dynlib: LLVMlib.}
#     ##  Determine whether a structure is packed.
#     ##
#     ##  @see llvm::StructType::isPacked()

# proc isOpaqueStruct*(structTy: TypeRef): Bool {.cdecl, importc: "LLVMIsOpaqueStruct", dynlib: LLVMlib.}
#     ##  Determine whether a structure is opaque.
#     ##
#     ##  @see llvm::StructType::isOpaque()

# proc isLiteralStruct*(structTy: TypeRef): Bool {.cdecl, importc: "LLVMIsLiteralStruct", dynlib: LLVMlib.}
#     ##  Determine whether a structure is literal.
#     ##
#     ##  @see llvm::StructType::isLiteral()


# ##  Sequential types represents "arrays" of types. This is a super class
# ##  for array, vector, and pointer types.
# proc getElementType*(ty: TypeRef): TypeRef {.cdecl, importc: "LLVMGetElementType", dynlib: LLVMlib.}
#     ##  Obtain the type of elements within a sequential type.
#     ##
#     ##  This works on array, vector, and pointer types.
#     ##
#     ##  @see llvm::SequentialType::getElementType()

# proc getSubtypes*(tp: TypeRef; arr: ptr TypeRef) {.cdecl, importc: "LLVMGetSubtypes", dynlib: LLVMlib.}
#     ##  Returns type's subtypes
#     ##
#     ##  @see llvm::Type::subtypes()

# proc getNumContainedTypes*(tp: TypeRef): cuint {.cdecl, importc: "LLVMGetNumContainedTypes", dynlib: LLVMlib.}
#     ##   Return the number of types in the derived type.
#     ##
#     ##  @see llvm::Type::getNumContainedTypes()

# proc arrayType*(elementType: TypeRef; elementCount: cuint): TypeRef {.cdecl, importc: "LLVMArrayType", dynlib: LLVMlib.}
#     ##  Create a fixed size array type that refers to a specific type.
#     ##
#     ##  The created type will exist in the context that its element type
#     ##  exists in.
#     ##
#     ##  @see llvm::ArrayType::get()

# proc getArrayLength*(arrayTy: TypeRef): cuint {.cdecl, importc: "LLVMGetArrayLength", dynlib: LLVMlib.}
#     ##  Obtain the length of an array type.
#     ##
#     ##  This only works on types that represent arrays.
#     ##
#     ##  @see llvm::ArrayType::getNumElements()

# proc pointerType*(elementType: TypeRef; addressSpace: cuint): TypeRef {.cdecl, importc: "LLVMPointerType", dynlib: LLVMlib.}
#     ##  Create a pointer type that points to a defined type.
#     ##
#     ##  The created type will exist in the context that its pointee type
#     ##  exists in.
#     ##
#     ##  @see llvm::PointerType::get()
proc pointerType*(elementType: Type, addressSpace: int = 0): PointerType =
    newType[PointerType](pointerType(elementType.typ, cuint addressSpace))

# proc getPointerAddressSpace*(pointerTy: TypeRef): cuint {.cdecl, importc: "LLVMGetPointerAddressSpace", dynlib: LLVMlib.}
#     ##  Obtain the address space of a pointer type.
#     ##
#     ##  This only works on types that represent pointers.
#     ##
#     ##  @see llvm::PointerType::getAddressSpace()

# proc vectorType*(elementType: TypeRef; elementCount: cuint): TypeRef {.cdecl, importc: "LLVMVectorType", dynlib: LLVMlib.}
#     ##  Create a vector type that contains a defined type and has a specific
#     ##  number of elements.
#     ##
#     ##  The created type will exist in the context thats its element type
#     ##  exists in.
#     ##
#     ##  @see llvm::VectorType::get()

# proc getVectorSize*(vectorTy: TypeRef): cuint {.cdecl, importc: "LLVMGetVectorSize", dynlib: LLVMlib.}
#     ##  Obtain the number of elements in a vector type.
#     ##
#     ##  This only works on types that represent vectors.
#     ##
#     ##  @see llvm::VectorType::getNumElements()

proc voidType*(cxt: Context): VoidType =
    ##  Create a void type in a context.
    ## 
    ##  Wrapping:
    ##  * `voidType(ContextRef)<../llvm/Core.html#voidType,ContextRef>`_
    newType[VoidType](cxt.context.voidTypeInContext())


# proc labelTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMLabelTypeInContext", dynlib: LLVMlib.}
#     ##  Create a label type in a context.

# proc x86MMXTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMX86MMXTypeInContext", dynlib: LLVMlib.}
#     ##  Create a X86 MMX type in a context.

# proc tokenTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMTokenTypeInContext", dynlib: LLVMlib.}
#     ##  Create a token type in a context.

# proc metadataTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMMetadataTypeInContext", dynlib: LLVMlib.}
#     ##  Create a metadata type in a context.

##  These are similar to the above functions except they operate on the
##  global context.
proc voidType*(): VoidType =
    ##  Create a void type in the global context.
    ## 
    ##  Wrapping:
    ##  * `voidType()<../llvm/Core.html#voidType>`_
    runnableExamples:
        var
            llVoid = voidType()

        assert $llVoid == "void"
    newType[VoidType](raw.voidType())
# proc labelType*(): TypeRef {.cdecl, importc: "LLVMLabelType", dynlib: LLVMlib.}
# proc x86MMXType*(): TypeRef {.cdecl, importc: "LLVMX86MMXType", dynlib: LLVMlib.}


# REGION: Value

# ##  Functions in this section work on all LLVMValueRef instances,
# ##  regardless of their sub-type. They correspond to functions available
# ##  on llvm::Value.
proc typ*(self: Value): Type =
    ##  Obtain the type of a value.
    ## 
    ##  Wrapping:
    ##  * `typeOfX(ValueRef)<../llvm/Core.html#typeOfX,ValueRef>`_
    newType[Type](self.value.typeOfX())

proc kind*(self: Value): ValueKind =
    ##  Obtain the enumerated type of a Value instance.
    ##  Wrapping:
    ##  * `getValueKind(ValueRef)<../llvm/Core.html#getValueKind,ValueRef>`_
    self.kind

proc name*(self: Value): string =
    ##  Obtain the string name of a value.
    ## 
    ##  Wrapping:
    ##  * `getValueName2(ValueRef, ptr csize_t)<../llvm/Core.html#getValueName2,ValueRef,ptr.csize_t>`_
    var
        len: csize_t
    result = $self.value.getValueName2(len.addr)

proc `name=`*(self: Value, name: string) =
    ##  Set the string name of a value.
    ## 
    ##  Wrapping:
    ##  * `setValueName2(ValueRef, cstring, csize_t)<../llvm/Core.html#setValueName2,ValueRef,cstring,csize_t>`_
    self.value.setValueName2(name, cuint name.len)

proc dump*(self: Value) =
    ##  Dump a representation of a value to stderr.
    ## 
    ##  Wrapping:
    ##  * `dumpValue(ValueRef)<../llvm/Core.html#dumpValue,ValueRef>`_
    self.value.dumpValue()

proc `$`*(self: Value): string =
    ##  Return a string representation of the value.
    ## 
    ##  Wrapping:
    ##  * `printValueToString(ValueRef)<../llvm/Core.html#printValueToString,ValueRef>`_
    var
        tmp = self.value.printValueToString()
    result = $tmp
    tmp.disposeMessage()

# proc replaceAllUsesWith*(oldVal: ValueRef; newVal: ValueRef) {.cdecl, importc: "LLVMReplaceAllUsesWith", dynlib: LLVMlib.}
#     ##  Replace all uses of a value with another one.
#     ##
#     ##  @see llvm::Value::replaceAllUsesWith()

# proc isConstant*(val: ValueRef): Bool {.cdecl, importc: "LLVMIsConstant", dynlib: LLVMlib.}
#     ##  Determine whether the specified value instance is constant.

# proc isUndef*(val: ValueRef): Bool {.cdecl, importc: "LLVMIsUndef", dynlib: LLVMlib.}
#     ##  Determine whether a value instance is undefined.
